separated texture classes

--- a/tools/hub/index.html
+++ b/tools/hub/index.html
@@ -63,10 +63,10 @@
                 <div class="navbar-item">
                     <div class="buttons">
                         <a class="button is-black">
-                            <span class="icon">
+                            <a class="icon">
                                 <i class="fas fa-download"></i>
-                              </span>
-                            <span class="has-text-warning-dark">Download Epsilon Engine v0.1.0-alpha</span>
+                            </a>
+                            <a href="https://github.com/ImanolFotia/Epsilon-Engine/archive/master.zip" class="has-text-warning-dark">Download Epsilon Engine v0.1.0-alpha</a>
                         </a>
                     </div>
                 </div>
